--- a/app/src/main/res/layout/activity_atur_schedule.xml
+++ b/app/src/main/res/layout/activity_atur_schedule.xml
@@ -148,6 +148,7 @@
                         </LinearLayout>
 
                         <TextView
+                            android:id="@+id/ic_tanggal"
                             android:layout_width="5dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
@@ -157,13 +158,15 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/ic_tanggal2"
                             android:layout_width="5dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:layout_weight="1"
                             android:layout_marginRight="5dp"
                             android:drawableLeft="@drawable/icon_tanggal"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:enabled="false"/>
 
                         <TextView
                             android:id="@+id/tv_tanggal"
