--- a/app/src/main/res/layout/activity_detail_part_diterima.xml
+++ b/app/src/main/res/layout/activity_detail_part_diterima.xml
@@ -127,19 +127,19 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="150dp"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_gravity="center"
                     android:textColor="@color/grey_900"
-                    android:text="DISCOUNT BELI"/>
+                    android:text="DISC. BELI"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/tl_total_terimaPart"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_marginEnd="5dp"
                     android:hint="Rp. ">
 
@@ -154,7 +154,8 @@
 
                 <android.support.design.widget.TextInputLayout
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                    android:layout_width="70dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:hint="%">
