--- a/app/src/main/res/layout/activity_atur_schedule.xml
+++ b/app/src/main/res/layout/activity_atur_schedule.xml
@@ -113,8 +113,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/paddingMedium"
-                    android:layout_marginBottom="@dimen/paddingMedium"
+                    android:layout_marginTop="@dimen/paddingXXSmall"
+                    android:layout_marginBottom="@dimen/paddingXXSmall"
                     android:gravity="center"
                     android:orientation="horizontal"
                     android:paddingStart="@dimen/paddingMedium"
@@ -135,6 +135,52 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="6"
+                        android:orientation="horizontal"
+                        android:padding="@dimen/paddingMedium">
+
+                        <TextView
+                            android:id="@+id/ic_tanggal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:drawableLeft="@drawable/icon_tanggal"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/ic_tanggal2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginStart="10dp"
+                            android:drawableLeft="@drawable/icon_tanggal"
+                            android:textStyle="bold"
+                            android:enabled="false"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/paddingXXSmall"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingStart="@dimen/paddingMedium"
+                    android:paddingEnd="@dimen/paddingMedium">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="12sp"
+                        android:textColor="@color/grey_900"
+                        android:textStyle="bold" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="6"
                         android:background="@drawable/background_edittext"
                         android:orientation="horizontal"
                         android:padding="@dimen/paddingMedium">
@@ -144,29 +190,7 @@
                             android:layout_height="wrap_content"
                             android:orientation="horizontal">
 
-
                         </LinearLayout>
-
-                        <TextView
-                            android:id="@+id/ic_tanggal"
-                            android:layout_width="5dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:layout_marginRight="10dp"
-                            android:drawableLeft="@drawable/icon_tanggal"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/ic_tanggal2"
-                            android:layout_width="5dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:layout_marginRight="5dp"
-                            android:drawableLeft="@drawable/icon_tanggal"
-                            android:textStyle="bold"
-                            android:enabled="false"/>
 
                         <TextView
                             android:id="@+id/tv_tanggal"
