--- a/app/src/main/res/layout/activity_laporan.xml
+++ b/app/src/main/res/layout/activity_laporan.xml
@@ -68,15 +68,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/paddingMedium"
-            android:layout_marginBottom="@dimen/paddingMedium"
+            android:layout_marginTop="@dimen/paddingXXSmall"
+            android:layout_marginBottom="@dimen/paddingXXSmall"
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingStart="@dimen/paddingMedium"
             android:paddingEnd="@dimen/paddingMedium">
 
             <TextView
-                android:id="@+id/textView7"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -86,7 +85,52 @@
                 android:textStyle="bold" />
 
             <LinearLayout
-                android:id="@+id/ly_tanggal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:orientation="horizontal"
+                android:padding="@dimen/paddingMedium">
+
+                <TextView
+                    android:id="@+id/ic_tglMulai_lap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:drawableLeft="@drawable/icon_tanggal"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/ic_tglSelesai_lap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="10dp"
+                    android:drawableLeft="@drawable/icon_tanggal"
+                    android:textStyle="bold"/>
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/paddingXXSmall"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingStart="@dimen/paddingMedium"
+            android:paddingEnd="@dimen/paddingMedium">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:textSize="12sp"
+                android:textColor="@color/grey_900"
+                android:textStyle="bold" />
+
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
@@ -99,28 +143,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/ic_tglMulai_lap"
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:layout_marginRight="10dp"
-                    android:drawableLeft="@drawable/icon_tanggal"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/ic_tglSelesai_lap"
-                    android:layout_width="5dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:layout_marginRight="5dp"
-                    android:drawableLeft="@drawable/icon_tanggal"
-                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/tv_tglMulai_lap"
@@ -181,10 +204,25 @@
         </LinearLayout>
 
 
+        <ProgressBar
+            android:id="@+id/progressBarHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            style="@style/CustomProgressBar"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_margin="5dip"
+            android:visibility="gone"
+            android:progress="0"/>
 
-
+        <TextView
+            android:id="@+id/txtProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"/>
 
     </LinearLayout>
+
 
 
 </android.support.design.widget.CoordinatorLayout>
