--- a/app/src/main/res/layout/activity_atur_inspeksi.xml
+++ b/app/src/main/res/layout/activity_atur_inspeksi.xml
@@ -43,6 +43,22 @@
                 android:layout_marginTop="@dimen/paddingSemiLarge"
                 android:layout_marginBottom="@dimen/paddingSemiLarge"/>
 
+            <android.support.design.widget.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:hint="@string/catatan_mekanik_uppercase">
+
+                <EditText
+                    android:id="@+id/et_catatan_mekanik"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="14sp"
+                    android:enabled="false" />
+
+            </android.support.design.widget.TextInputLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
