--- a/app/src/main/res/layout/activity_laporan.xml
+++ b/app/src/main/res/layout/activity_laporan.xml
@@ -93,11 +93,13 @@
 
                 <TextView
                     android:id="@+id/ic_tglMulai_lap"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:drawableLeft="@drawable/icon_tanggal"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:layout_weight="1"
+                    tools:ignore="NestedWeights" />
 
                 <TextView
                     android:id="@+id/ic_tglSelesai_lap"
@@ -212,14 +214,15 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:layout_margin="5dip"
-            android:visibility="gone"
             android:progress="0"/>
 
         <TextView
             android:id="@+id/txtProgress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"/>
 
     </LinearLayout>
 
