--- a/app/src/main/res/layout/item_rincian_pembayaran_pembelian.xml
+++ b/app/src/main/res/layout/item_rincian_pembayaran_pembelian.xml
@@ -207,6 +207,30 @@
 
                         </TableRow>
 
+                        <TableRow
+                            android:id="@+id/tr_disc_spot"
+                            android:layout_marginTop="5dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="DISCOUNT SPOT"
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textColor="@color/grey_900"
+                                android:textSize="12sp" />
+
+                            <TextView
+                                android:id="@+id/tv_disc_spot_jual_part"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Rp.0 "
+                                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                                android:textColor="@color/grey_900"
+                                android:textSize="12sp" />
+
+                        </TableRow>
+
+
                         <TableRow android:layout_marginTop="5dp">
 
                             <TextView
