--- a/app/src/main/res/layout/activity_atur_komisi_layanan_.xml
+++ b/app/src/main/res/layout/activity_atur_komisi_layanan_.xml
@@ -15,29 +15,38 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="10dp">
+            android:padding="@dimen/paddingSemiLarge"
+            android:layout_marginBottom="@dimen/paddingSemiLarge">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/border_solid"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:text="NAMA POSISI" />
-
-                <com.rkrzmail.srv.MultiSelectionSpinner
-                    android:id="@+id/sp_namaPosisi_komisiLayanan"
                     android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:text="@string/aktivitas_uppercase" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_layanan_aktivitas"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -45,23 +54,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/border_solid"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:padding="10dp">
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="150dp"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:text="NAMA LAYANAN" />
-
-                <Spinner
-                    android:id="@+id/sp_namaLayanan_komisiLayanan"
                     android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:text="@string/layanan_uppercase" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_komisi_layanan"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center" />
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -72,18 +89,86 @@
                 android:layout_marginTop="5dp">
 
                 <EditText
-                    android:id="@+id/et_komisi_komisiLayanan"
+                    android:id="@+id/et_komisi_layanan_percent"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="KOMISI"
+                    android:hint="@string/komisi_percent_uppercase"
                     android:inputType="numberDecimal"
+                    android:maxLength="5"
                     android:textSize="14sp" />
 
             </android.support.design.widget.TextInputLayout>
 
-            <include layout="@layout/layout_btn_simpan_hapus"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:textColor="@color/grey_900"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    android:layout_height="wrap_content"
+                    android:text="@string/status_uppercase" />
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_weight="6"
+                    android:background="@drawable/background_edittext">
+
+                    <Spinner
+                        android:id="@+id/sp_layanan_status"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center" />
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="@dimen/spacing_large">
+
+                <TextView
+                    android:id="@+id/tv_total_komisi_layanan"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.5"
+                    android:background="@drawable/background_edittext"
+                    android:padding="@dimen/paddingSemiLarge"
+                    android:textAlignment="center"
+                    android:textColor="@color/grey_900"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    android:text="@string/total_komisi_percent"/>
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:id="@+id/btn_simpan_komisiLayanan"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:textColor="@android:color/white"
+                    android:text="@string/simpan_uppercase"/>
+
+            </LinearLayout>
 
         </LinearLayout>
+
     </ScrollView>
 
     <android.support.design.widget.AppBarLayout
